Add order column from pivot table to the Media resource
